--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "devDependencies": {
-    "tailwindcss": "^3.2"
+    "tailwindcss": "~3.2",
+    "tailwindcss-rtl": "^0.9.0"
   },
   "dependencies": {
     "autoprefixer": "^10.4.11",
+    "flowbite": "^1.5.3",
     "postcss": "^8.4.16"
   }
 }
